--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </select>
 
     <div class="actionsButtons">
-      <a title="COMMAND+ENTER or CTRL+ENTER" data-action="play" class="play-button hidden btn btn-block btn-lg btn-primary">
+      <a title="COMMAND+ENTER or CTRL+ENTER" data-action="play" class="play-button btn btn-block btn-lg btn-primary">
           <i class="fui-eye-16"></i>Run Code
       </a>
     </div>
 
 		<!--file selector-->
-		<div class="editor-picker hidden btn-group">
+		<div class="editor-picker btn-group">
 			<a class="btn btn-lg btn-primary" data-editor="bundle">
 				code
 			</a>
@@ -101,7 +101,6 @@
     <div id="edit-head" class="require-bin-editor left hidden"></div>
     <div id="edit-body" class="require-bin-editor left hidden"></div>
     <div id="edit-bundle" class="require-bin-editor left"></div>
-    <div id="console" class="require-bin-editor right"></div>
 
 <script id="bundle-template" type="text/template">// require() some stuff from npm (like you were using browserify)
 // and then hit Run Code to run it on the right
