sandbox + ace messages + errors

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div id="edit-head" class="require-bin-editor left hidden"></div>
     <div id="edit-body" class="require-bin-editor left hidden"></div>
     <div id="edit-bundle" class="require-bin-editor left"></div>
+    <div id="console" class="hidden left"></div>
 
 <script id="bundle-template" type="text/template">// require() some stuff from npm (like you were using browserify)
 // and then hit Run Code to run it on the right
