--- a/index.html
+++ b/index.html
@@ -34,12 +34,6 @@
   			<a class="btn btn-lg btn-primary" data-editor="bundle">
   				code
   			</a>
-  			<a class="btn btn-lg" data-editor="head">
-  				&lt;head&gt;
-  			</a>
-  			<a class="btn btn-lg" data-editor="body">
-  				&lt;body&gt;
-  			</a>
   			<a class="btn btn-lg" data-editor="meta">
   				package.json
   			</a>
@@ -116,8 +110,9 @@
       <div id="console"></div>
     </div>
 
-<script id="bundle-template" type="text/template">// require() some stuff from npm (like you were using browserify)
-// and then hit Run Code to run it on the right
+<script id="bundle-template" type="text/template">function main () {
+  
+}
 </script>
   <script type="text/javascript" src="flatui-deps.js"></script>
   <script type="text/javascript" src="bundle.js"></script>
