--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/magnific-popup.min.css"/>
   </head>
   <body>
+
+    <div id="load-dialog" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body&hellip;</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     <div class="toolbar">
       <h3 class="logo"><img src="img/cycle-shell.png">Cycle Shell</h3>
 
@@ -47,6 +66,7 @@
 
       <select class="actionsMenu" value="Actions" tabindex="1">
         <option value="noop" selected="selected">Actions</option>
+        <option value="load"><button>Load Gist</button></option>
         <option value="save">Save Gist</option>
         <option value="save-private">Save Private Gist</option>
         <option value="show-forks">Show Forks</option>
@@ -111,7 +131,7 @@
     </div>
 
 <script id="bundle-template" type="text/template">function main () {
-  
+
 }
 </script>
   <script type="text/javascript" src="flatui-deps.js"></script>
