--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">Modal title</h4>
           </div>
-          <div class="modal-body">
+          <div id="modal-body" class="modal-body">
             <p>One fine body&hellip;</p>
           </div>
           <div class="modal-footer">
