--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Modal title</h4>
+            <h4 class="modal-title">Gists</h4>
           </div>
           <div id="modal-body" class="modal-body-list list-group">
             <p>One fine body&hellip;</p>
