--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div id="edit-head" class="require-bin-editor left hidden"></div>
     <div id="edit-body" class="require-bin-editor left hidden"></div>
     <div id="edit-bundle" class="require-bin-editor left"></div>
-    <div id="console-container">
+    <div id="console-container" class="minimize">
       <div id="console-toolbar">
         <h4 id="console-header">Log</h4>
         <button id="console-button" class="btn btn-block btn-lg btn-primary">Clear</button>
