--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         </a>
       </div>
 
+      <div id="preview" class="actionsButtons">
+        <a id="preview-btn" data-action="preview" target="_blank" class="disabled btn btn-lg">
+            Full Screen Preview
+        </a>
+      </div>
+
+
   		<div class="editor-picker btn-group">
   			<a class="btn btn-lg btn-primary" data-editor="bundle">
   				code
