--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div id="preview" class="actionsButtons">
         <a id="preview-btn" data-action="preview" target="_blank" class="disabled btn btn-lg">
-            Full Screen Preview
+            <i class="fui-new-16"></i>Full Screen Preview
         </a>
       </div>
 
