--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button id="save" type="button" class="btn btn-default" data-action="save-name">Save</button>
+            <button id="save" type="button" class="btn btn-default" data-dismiss="modal" data-action="save-name">Save</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
