--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
 
       <select id="dropdown" class="actionsMenu hide" value="Actions" tabindex="1">
-        <option value="noop" selected="selected">Actions</option>
+        <option id="username" value="noop" selected="selected">Actions</option>
         <option value="load"><button>Load Gist</button></option>
         <option value="save">Save Gist</option>
         <option value="save-private">Save Private Gist</option>
