--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <option id="username" value="noop" selected="selected">Actions</option>
         <option value="load"><button>Load Gist</button></option>
         <option value="save">Save Gist</option>
+        <option value="edit-json">Edit package.json></option>
         <option value="save-private">Save Private Gist</option>
         <option id="logout" value="logout">Logout</option>
       </select>
