--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div id="edit-bundle" class="require-bin-editor left"></div>
     <div id="console-container" class="minimize">
       <div id="console-toolbar">
-        <h4 id="console-header">Log</h4>
+        <h4 id="console-header">Log <div class="counter-container" id="counter-container">(<div id="counter"></div>)</div></h4>
         <button id="console-button" class="btn btn-block btn-lg btn-primary">Clear</button>
       </div>
       <div id="console"></div>
