--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
   </head>
   <body>
 
+    <div id="edit-meta-modal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">package.json</h4>
+          </div>
+          <div id="modal-body" class="modal-body-list list-group">
+            <div id="edit-meta" class="require-bin-editor"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default primary" data-dismiss="modal" data-action="save-meta">Save</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     <div id="load-dialog" class="modal fade" tabindex="-1" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
